--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -1,20 +1,98 @@
 #map {
-    width: 100%;
-    height: 500px;
-    margin-bottom: 20px;
-    margin-bottom: 20px;
+  width: 100%;
+  height: 500px;
+  margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 button {
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-right: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-right: 10px;
 }
 
 button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
+}
+
+/* Style for the switch container */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 42px;
+  height: 28px;
+}
+
+/* Hide the default checkbox input */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* Style for the slider (the visible part of the switch) */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 12px;
+  /* Smaller border-radius for a smaller button */
+}
+
+/* Style for the slider when the checkbox is checked (active) */
+.slider::before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  /* Adjust the height as needed */
+  width: 20px;
+  /* Adjust the width as needed */
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+/* Style for the slider when the checkbox is checked (active) */
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+/* Style for the slider when the checkbox is checked (active) */
+input:checked + .slider::before {
+  transform: translateX(14px);
+  /* Adjust the translation as needed */
+}
+
+/* Optional: Add some styles for the label (text) */
+label {
+  display: flex;
+  align-items: center;
+  user-select: none;
+}
+
+/* Style for the switch container */
+.switch-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Style for the switch label */
+.switch-label {
+  flex-grow: 1;
+  font-size: 14px;
+}
+
+.switch-loading {
+  background-color: #ccc;
 }
